Uploaded model in progress ; if any tips to fix training and validation numbers would be great

--- a/model_train.ipynb
+++ b/model_train.ipynb
@@ -1,13 +1,197 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/lundm/.local/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "from torchvision import datasets, transforms, models\n",
+    "from torch.utils.data import DataLoader\n",
+    "from torch.optim.lr_scheduler import StepLR\n",
+    "\n",
+    "print(torch.cuda.is_available())\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data Transformations and Dataset file paths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "img_train_path = 'images/train'\n",
     "img_validation_path = 'images/validation'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transform = transforms.Compose([\n",
+    "    transforms.RandomHorizontalFlip(),\n",
+    "    transforms.RandomRotation(10),\n",
+    "    transforms.RandomResizedCrop(224),\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]),\n",
+    "])\n",
+    "\n",
+    "# Load datasets\n",
+    "train_dataset = datasets.ImageFolder(root=img_train_path, transform=transform)\n",
+    "val_dataset = datasets.ImageFolder(root=img_validation_path, transform=transform)\n",
+    "\n",
+    "train_loader = DataLoader(train_dataset, batch_size=512, shuffle=True)\n",
+    "val_loader = DataLoader(val_dataset, batch_size=512, shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Model Loading (Utilizing ResNet18)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the model\n",
+    "class EmotionCNN(nn.Module):\n",
+    "    def __init__(self, num_classes):\n",
+    "        super(EmotionCNN, self).__init__()\n",
+    "        self.model = models.resnet18(pretrained=True)\n",
+    "        self.model.fc = nn.Linear(self.model.fc.in_features, num_classes, device=device)\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        return self.model(x)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Training + Loss Func + Optimizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_classes = 7\n",
+    "model = EmotionCNN(num_classes=7).to(device)\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = optim.Adam(model.parameters(), lr=0.00015)\n",
+    "#scheduler = StepLR(optimizer, step_size=7, gamma=0.1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1, Train Loss: 1.4622, Val Loss: 1.3449, Train Acc: 0.4281, Val Acc: 0.4843\n",
+      "Epoch 2, Train Loss: 1.2826, Val Loss: 1.2522, Train Acc: 0.5060, Val Acc: 0.5207\n",
+      "Epoch 3, Train Loss: 1.2216, Val Loss: 1.2034, Train Acc: 0.5334, Val Acc: 0.5447\n",
+      "Epoch 4, Train Loss: 1.1786, Val Loss: 1.1713, Train Acc: 0.5505, Val Acc: 0.5521\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "for epoch in range(50):\n",
+    "    model.train()\n",
+    "    running_loss = 0.0\n",
+    "    correct_train = 0\n",
+    "    total_train = 0\n",
+    "    for inputs, labels in train_loader:\n",
+    "        inputs, labels = inputs.to(device), labels.to(device)\n",
+    "        optimizer.zero_grad()\n",
+    "        outputs = model(inputs)\n",
+    "        loss = criterion(outputs, labels)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        running_loss += loss.item() * inputs.size(0)\n",
+    "        \n",
+    "        _, predicted = torch.max(outputs, 1)\n",
+    "        total_train += labels.size(0)\n",
+    "        correct_train += (predicted == labels).sum().item()\n",
+    "    \n",
+    "    \n",
+    "    model.eval()\n",
+    "    val_loss = 0.0\n",
+    "    correct_val = 0\n",
+    "    total_val = 0\n",
+    "    with torch.no_grad():\n",
+    "        for inputs, labels in val_loader:\n",
+    "            inputs, labels = inputs.to(device), labels.to(device)\n",
+    "            outputs = model(inputs)\n",
+    "            loss = criterion(outputs, labels)\n",
+    "            val_loss += loss.item() * inputs.size(0)\n",
+    "            \n",
+    "            _, predicted = torch.max(outputs, 1)\n",
+    "            total_val += labels.size(0)\n",
+    "            correct_val += (predicted == labels).sum().item()\n",
+    "    \n",
+    "    train_loss = running_loss / len(train_loader.dataset)\n",
+    "    val_loss = val_loss / len(val_loader.dataset)\n",
+    "    train_accuracy = correct_train / total_train\n",
+    "    val_accuracy = correct_val / total_val\n",
+    "    \n",
+    "    print(f'Epoch {epoch+1}, Train Loss: {train_loss:.4f}, Val Loss: {val_loss:.4f}, Train Acc: {train_accuracy:.4f}, Val Acc: {val_accuracy:.4f}')"
    ]
   }
  ],
