--- a/model_train.ipynb
+++ b/model_train.ipynb
@@ -24,7 +24,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "True\n",
+      "cuda\n"
      ]
     }
    ],
@@ -35,9 +36,12 @@
     "from torchvision import datasets, transforms, models\n",
     "from torch.utils.data import DataLoader\n",
     "from torch.optim.lr_scheduler import StepLR\n",
+    "from torch.cuda.amp import GradScaler, autocast\n",
     "\n",
     "print(torch.cuda.is_available())\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "print(device)"
    ]
   },
   {
@@ -59,14 +63,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "transform = transforms.Compose([\n",
     "    transforms.RandomHorizontalFlip(),\n",
-    "    transforms.RandomRotation(10),\n",
     "    transforms.RandomResizedCrop(224),\n",
+    "    transforms.RandomRotation(10),\n",
+    "    transforms.ColorJitter(brightness=0.2, contrast=0.2, saturation=0.2, hue=0.2),\n",
+    "    transforms.RandomAffine(degrees=0, translate=(0.1, 0.1)),\n",
     "    transforms.ToTensor(),\n",
     "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]),\n",
     "])\n",
@@ -75,8 +81,10 @@
     "train_dataset = datasets.ImageFolder(root=img_train_path, transform=transform)\n",
     "val_dataset = datasets.ImageFolder(root=img_validation_path, transform=transform)\n",
     "\n",
-    "train_loader = DataLoader(train_dataset, batch_size=512, shuffle=True)\n",
-    "val_loader = DataLoader(val_dataset, batch_size=512, shuffle=False)"
+    "batch_size = 128\n",
+    "\n",
+    "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True, num_workers=4)\n",
+    "val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False, num_workers=4)"
    ]
   },
   {
@@ -92,15 +100,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define the model\n",
     "class EmotionCNN(nn.Module):\n",
     "    def __init__(self, num_classes):\n",
     "        super(EmotionCNN, self).__init__()\n",
-    "        self.model = models.resnet18(pretrained=True)\n",
-    "        self.model.fc = nn.Linear(self.model.fc.in_features, num_classes, device=device)\n",
+    "        self.model = models.resnet50(pretrained=True)\n",
+    "        self.model.fc = nn.Linear(self.model.fc.in_features, num_classes)\n",
     "    \n",
     "    def forward(self, x):\n",
-    "        return self.model(x)\n"
+    "        return self.model(x)"
    ]
   },
   {
@@ -112,86 +119,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/lundm/.local/lib/python3.10/site-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+      "  warnings.warn(\n",
+      "/home/lundm/.local/lib/python3.10/site-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=ResNet50_Weights.IMAGENET1K_V1`. You can also use `weights=ResNet50_Weights.DEFAULT` to get the most up-to-date weights.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    }
+   ],
    "source": [
     "num_classes = 7\n",
-    "model = EmotionCNN(num_classes=7).to(device)\n",
+    "\n",
+    "model = EmotionCNN(num_classes).to(device)\n",
+    "\n",
     "criterion = nn.CrossEntropyLoss()\n",
-    "optimizer = optim.Adam(model.parameters(), lr=0.00015)\n",
-    "#scheduler = StepLR(optimizer, step_size=7, gamma=0.1)\n"
+    "optimizer = optim.Adagrad(model.parameters(), lr=2e-4)\n",
+    "scheduler = StepLR(optimizer, step_size=7, gamma=0.1)\n",
+    "scaler = GradScaler()\n",
+    "\n",
+    "\n",
+    "num_epochs = 15"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1, Train Loss: 1.4622, Val Loss: 1.3449, Train Acc: 0.4281, Val Acc: 0.4843\n",
-      "Epoch 2, Train Loss: 1.2826, Val Loss: 1.2522, Train Acc: 0.5060, Val Acc: 0.5207\n",
-      "Epoch 3, Train Loss: 1.2216, Val Loss: 1.2034, Train Acc: 0.5334, Val Acc: 0.5447\n",
-      "Epoch 4, Train Loss: 1.1786, Val Loss: 1.1713, Train Acc: 0.5505, Val Acc: 0.5521\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "Epoch 0/14, Training Loss: 1.4989, Training Accuracy: 0.4133\n",
+      "Validation Loss: 1.3814, Validation Accuracy: 0.4711\n",
+      "Epoch 1/14, Training Loss: 1.3398, Training Accuracy: 0.4821\n",
+      "Validation Loss: 1.2986, Validation Accuracy: 0.5001\n",
+      "Epoch 2/14, Training Loss: 1.2877, Training Accuracy: 0.5032\n",
+      "Validation Loss: 1.2637, Validation Accuracy: 0.5146\n",
+      "Epoch 3/14, Training Loss: 1.2579, Training Accuracy: 0.5163\n",
+      "Validation Loss: 1.2479, Validation Accuracy: 0.5212\n",
+      "Epoch 4/14, Training Loss: 1.2243, Training Accuracy: 0.5325\n",
+      "Validation Loss: 1.2367, Validation Accuracy: 0.5304\n",
+      "Epoch 5/14, Training Loss: 1.2069, Training Accuracy: 0.5419\n",
+      "Validation Loss: 1.2046, Validation Accuracy: 0.5413\n",
+      "Epoch 6/14, Training Loss: 1.1915, Training Accuracy: 0.5455\n",
+      "Validation Loss: 1.1948, Validation Accuracy: 0.5413\n",
+      "Epoch 7/14, Training Loss: 1.1873, Training Accuracy: 0.5460\n",
+      "Validation Loss: 1.1970, Validation Accuracy: 0.5514\n",
+      "Epoch 8/14, Training Loss: 1.1771, Training Accuracy: 0.5516\n",
+      "Validation Loss: 1.1949, Validation Accuracy: 0.5500\n",
+      "Epoch 9/14, Training Loss: 1.1757, Training Accuracy: 0.5529\n",
+      "Validation Loss: 1.1921, Validation Accuracy: 0.5500\n",
+      "Epoch 10/14, Training Loss: 1.1734, Training Accuracy: 0.5553\n",
+      "Validation Loss: 1.1901, Validation Accuracy: 0.5467\n",
+      "Epoch 11/14, Training Loss: 1.1794, Training Accuracy: 0.5512\n",
+      "Validation Loss: 1.1964, Validation Accuracy: 0.5524\n",
+      "Epoch 12/14, Training Loss: 1.1735, Training Accuracy: 0.5526\n",
+      "Validation Loss: 1.1912, Validation Accuracy: 0.5434\n",
+      "Epoch 13/14, Training Loss: 1.1636, Training Accuracy: 0.5589\n",
+      "Validation Loss: 1.1930, Validation Accuracy: 0.5498\n",
+      "Epoch 14/14, Training Loss: 1.1726, Training Accuracy: 0.5510\n",
+      "Validation Loss: 1.1930, Validation Accuracy: 0.5483\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "for epoch in range(50):\n",
+    "for epoch in range(num_epochs):\n",
     "    model.train()\n",
     "    running_loss = 0.0\n",
-    "    correct_train = 0\n",
-    "    total_train = 0\n",
+    "    corrects = 0\n",
     "    for inputs, labels in train_loader:\n",
     "        inputs, labels = inputs.to(device), labels.to(device)\n",
     "        optimizer.zero_grad()\n",
-    "        outputs = model(inputs)\n",
-    "        loss = criterion(outputs, labels)\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
+    "        with autocast():\n",
+    "            outputs = model(inputs)\n",
+    "            loss = criterion(outputs, labels)\n",
+    "        scaler.scale(loss).backward()\n",
+    "        scaler.step(optimizer)\n",
+    "        scaler.update()\n",
     "        running_loss += loss.item() * inputs.size(0)\n",
-    "        \n",
-    "        _, predicted = torch.max(outputs, 1)\n",
-    "        total_train += labels.size(0)\n",
-    "        correct_train += (predicted == labels).sum().item()\n",
+    "        _, preds = torch.max(outputs, 1)\n",
+    "        corrects += torch.sum(preds == labels.data)\n",
     "    \n",
-    "    \n",
+    "    scheduler.step()\n",
+    "\n",
+    "    epoch_loss = running_loss / len(train_loader.dataset)\n",
+    "    epoch_acc = corrects.double() / len(train_loader.dataset)\n",
+    "    print(f'Epoch {epoch}/{num_epochs - 1}, Training Loss: {epoch_loss:.4f}, Training Accuracy: {epoch_acc:.4f}')\n",
+    "\n",
+    "    # Validation loop\n",
     "    model.eval()\n",
     "    val_loss = 0.0\n",
-    "    correct_val = 0\n",
-    "    total_val = 0\n",
+    "    corrects = 0\n",
     "    with torch.no_grad():\n",
     "        for inputs, labels in val_loader:\n",
     "            inputs, labels = inputs.to(device), labels.to(device)\n",
-    "            outputs = model(inputs)\n",
-    "            loss = criterion(outputs, labels)\n",
+    "            with autocast():\n",
+    "                outputs = model(inputs)\n",
+    "                loss = criterion(outputs, labels)\n",
     "            val_loss += loss.item() * inputs.size(0)\n",
-    "            \n",
-    "            _, predicted = torch.max(outputs, 1)\n",
-    "            total_val += labels.size(0)\n",
-    "            correct_val += (predicted == labels).sum().item()\n",
+    "            _, preds = torch.max(outputs, 1)\n",
+    "            corrects += torch.sum(preds == labels.data)\n",
     "    \n",
-    "    train_loss = running_loss / len(train_loader.dataset)\n",
     "    val_loss = val_loss / len(val_loader.dataset)\n",
-    "    train_accuracy = correct_train / total_train\n",
-    "    val_accuracy = correct_val / total_val\n",
-    "    \n",
-    "    print(f'Epoch {epoch+1}, Train Loss: {train_loss:.4f}, Val Loss: {val_loss:.4f}, Train Acc: {train_accuracy:.4f}, Val Acc: {val_accuracy:.4f}')"
+    "    val_acc = corrects.double() / len(val_loader.dataset)\n",
+    "    print(f'Validation Loss: {val_loss:.4f}, Validation Accuracy: {val_acc:.4f}')"
    ]
   }
  ],
