--- a/model_train_huggingface.ipynb
+++ b/model_train_huggingface.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -107,22 +107,23 @@
     "\n",
     "#Import Moel from HuggingFace\n",
     "\n",
-    "model = \"google/mobilenet_v2_1.0_224\"\n",
-    "#model = \"microsoft/resnet-26\"\n",
+    "#model = \"google/mobilenet_v2_1.0_224\"\n",
+    "model = \"microsoft/resnet-26\"\n",
+    "#model = \"microsoft/resnet-50\"\n",
     "feature_extractor = AutoFeatureExtractor.from_pretrained(model)\n",
     "model = AutoModelForImageClassification.from_pretrained(model)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'label': 4, 'image': <PIL.PngImagePlugin.PngImageFile image mode=RGB size=48x48 at 0x7F81F77D6980>}\n"
+      "{'label': 4, 'image': <PIL.PngImagePlugin.PngImageFile image mode=RGB size=48x48 at 0x7F81E59838B0>}\n"
      ]
     }
    ],
@@ -132,20 +133,231 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Map: 100%|██████████| 24000/24000 [02:19<00:00, 171.59 examples/s]\n",
-      "Map: 100%|██████████| 3589/3589 [00:14<00:00, 254.37 examples/s]\n",
-      "Map: 100%|██████████| 1050/1050 [00:02<00:00, 365.38 examples/s]\n",
-      "Map: 100%|██████████| 1950/1950 [00:07<00:00, 261.12 examples/s]\n"
+      "MobileNetV2ForImageClassification(\n",
+      "  (mobilenet_v2): MobileNetV2Model(\n",
+      "    (conv_stem): MobileNetV2Stem(\n",
+      "      (first_conv): MobileNetV2ConvLayer(\n",
+      "        (convolution): Conv2d(3, 32, kernel_size=(3, 3), stride=(2, 2), bias=False)\n",
+      "        (normalization): BatchNorm2d(32, eps=0.001, momentum=0.997, affine=True, track_running_stats=True)\n",
+      "        (activation): ReLU6()\n",
+      "      )\n",
+      "      (conv_3x3): MobileNetV2ConvLayer(\n",
+      "        (convolution): Conv2d(32, 32, kernel_size=(3, 3), stride=(1, 1), groups=32, bias=False)\n",
+      "        (normalization): BatchNorm2d(32, eps=0.001, momentum=0.997, affine=True, track_running_stats=True)\n",
+      "        (activation): ReLU6()\n",
+      "      )\n",
+      "      (reduce_1x1): MobileNetV2ConvLayer(\n",
+      "        (convolution): Conv2d(32, 16, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+      "        (normalization): BatchNorm2d(16, eps=0.001, momentum=0.997, affine=True, track_running_stats=True)\n",
+      "      )\n",
+      "    )\n",
+      "    (layer): ModuleList(\n",
+      "      (0): MobileNetV2InvertedResidual(\n",
+      "        (expand_1x1): MobileNetV2ConvLayer(\n",
+      "          (convolution): Conv2d(16, 96, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+      "          (normalization): BatchNorm2d(96, eps=0.001, momentum=0.997, affine=True, track_running_stats=True)\n",
+      "          (activation): ReLU6()\n",
+      "        )\n",
+      "        (conv_3x3): MobileNetV2ConvLayer(\n",
+      "          (convolution): Conv2d(96, 96, kernel_size=(3, 3), stride=(2, 2), groups=96, bias=False)\n",
+      "          (normalization): BatchNorm2d(96, eps=0.001, momentum=0.997, affine=True, track_running_stats=True)\n",
+      "          (activation): ReLU6()\n",
+      "        )\n",
+      "        (reduce_1x1): MobileNetV2ConvLayer(\n",
+      "          (convolution): Conv2d(96, 24, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+      "          (normalization): BatchNorm2d(24, eps=0.001, momentum=0.997, affine=True, track_running_stats=True)\n",
+      "        )\n",
+      "      )\n",
+      "      (1): MobileNetV2InvertedResidual(\n",
+      "        (expand_1x1): MobileNetV2ConvLayer(\n",
+      "          (convolution): Conv2d(24, 144, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+      "          (normalization): BatchNorm2d(144, eps=0.001, momentum=0.997, affine=True, track_running_stats=True)\n",
+      "          (activation): ReLU6()\n",
+      "        )\n",
+      "        (conv_3x3): MobileNetV2ConvLayer(\n",
+      "          (convolution): Conv2d(144, 144, kernel_size=(3, 3), stride=(1, 1), groups=144, bias=False)\n",
+      "          (normalization): BatchNorm2d(144, eps=0.001, momentum=0.997, affine=True, track_running_stats=True)\n",
+      "          (activation): ReLU6()\n",
+      "        )\n",
+      "        (reduce_1x1): MobileNetV2ConvLayer(\n",
+      "          (convolution): Conv2d(144, 24, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+      "          (normalization): BatchNorm2d(24, eps=0.001, momentum=0.997, affine=True, track_running_stats=True)\n",
+      "        )\n",
+      "      )\n",
+      "      (2): MobileNetV2InvertedResidual(\n",
+      "        (expand_1x1): MobileNetV2ConvLayer(\n",
+      "          (convolution): Conv2d(24, 144, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+      "          (normalization): BatchNorm2d(144, eps=0.001, momentum=0.997, affine=True, track_running_stats=True)\n",
+      "          (activation): ReLU6()\n",
+      "        )\n",
+      "        (conv_3x3): MobileNetV2ConvLayer(\n",
+      "          (convolution): Conv2d(144, 144, kernel_size=(3, 3), stride=(2, 2), groups=144, bias=False)\n",
+      "          (normalization): BatchNorm2d(144, eps=0.001, momentum=0.997, affine=True, track_running_stats=True)\n",
+      "          (activation): ReLU6()\n",
+      "        )\n",
+      "        (reduce_1x1): MobileNetV2ConvLayer(\n",
+      "          (convolution): Conv2d(144, 32, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+      "          (normalization): BatchNorm2d(32, eps=0.001, momentum=0.997, affine=True, track_running_stats=True)\n",
+      "        )\n",
+      "      )\n",
+      "      (3-4): 2 x MobileNetV2InvertedResidual(\n",
+      "        (expand_1x1): MobileNetV2ConvLayer(\n",
+      "          (convolution): Conv2d(32, 192, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+      "          (normalization): BatchNorm2d(192, eps=0.001, momentum=0.997, affine=True, track_running_stats=True)\n",
+      "          (activation): ReLU6()\n",
+      "        )\n",
+      "        (conv_3x3): MobileNetV2ConvLayer(\n",
+      "          (convolution): Conv2d(192, 192, kernel_size=(3, 3), stride=(1, 1), groups=192, bias=False)\n",
+      "          (normalization): BatchNorm2d(192, eps=0.001, momentum=0.997, affine=True, track_running_stats=True)\n",
+      "          (activation): ReLU6()\n",
+      "        )\n",
+      "        (reduce_1x1): MobileNetV2ConvLayer(\n",
+      "          (convolution): Conv2d(192, 32, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+      "          (normalization): BatchNorm2d(32, eps=0.001, momentum=0.997, affine=True, track_running_stats=True)\n",
+      "        )\n",
+      "      )\n",
+      "      (5): MobileNetV2InvertedResidual(\n",
+      "        (expand_1x1): MobileNetV2ConvLayer(\n",
+      "          (convolution): Conv2d(32, 192, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+      "          (normalization): BatchNorm2d(192, eps=0.001, momentum=0.997, affine=True, track_running_stats=True)\n",
+      "          (activation): ReLU6()\n",
+      "        )\n",
+      "        (conv_3x3): MobileNetV2ConvLayer(\n",
+      "          (convolution): Conv2d(192, 192, kernel_size=(3, 3), stride=(2, 2), groups=192, bias=False)\n",
+      "          (normalization): BatchNorm2d(192, eps=0.001, momentum=0.997, affine=True, track_running_stats=True)\n",
+      "          (activation): ReLU6()\n",
+      "        )\n",
+      "        (reduce_1x1): MobileNetV2ConvLayer(\n",
+      "          (convolution): Conv2d(192, 64, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+      "          (normalization): BatchNorm2d(64, eps=0.001, momentum=0.997, affine=True, track_running_stats=True)\n",
+      "        )\n",
+      "      )\n",
+      "      (6-8): 3 x MobileNetV2InvertedResidual(\n",
+      "        (expand_1x1): MobileNetV2ConvLayer(\n",
+      "          (convolution): Conv2d(64, 384, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+      "          (normalization): BatchNorm2d(384, eps=0.001, momentum=0.997, affine=True, track_running_stats=True)\n",
+      "          (activation): ReLU6()\n",
+      "        )\n",
+      "        (conv_3x3): MobileNetV2ConvLayer(\n",
+      "          (convolution): Conv2d(384, 384, kernel_size=(3, 3), stride=(1, 1), groups=384, bias=False)\n",
+      "          (normalization): BatchNorm2d(384, eps=0.001, momentum=0.997, affine=True, track_running_stats=True)\n",
+      "          (activation): ReLU6()\n",
+      "        )\n",
+      "        (reduce_1x1): MobileNetV2ConvLayer(\n",
+      "          (convolution): Conv2d(384, 64, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+      "          (normalization): BatchNorm2d(64, eps=0.001, momentum=0.997, affine=True, track_running_stats=True)\n",
+      "        )\n",
+      "      )\n",
+      "      (9): MobileNetV2InvertedResidual(\n",
+      "        (expand_1x1): MobileNetV2ConvLayer(\n",
+      "          (convolution): Conv2d(64, 384, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+      "          (normalization): BatchNorm2d(384, eps=0.001, momentum=0.997, affine=True, track_running_stats=True)\n",
+      "          (activation): ReLU6()\n",
+      "        )\n",
+      "        (conv_3x3): MobileNetV2ConvLayer(\n",
+      "          (convolution): Conv2d(384, 384, kernel_size=(3, 3), stride=(1, 1), groups=384, bias=False)\n",
+      "          (normalization): BatchNorm2d(384, eps=0.001, momentum=0.997, affine=True, track_running_stats=True)\n",
+      "          (activation): ReLU6()\n",
+      "        )\n",
+      "        (reduce_1x1): MobileNetV2ConvLayer(\n",
+      "          (convolution): Conv2d(384, 96, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+      "          (normalization): BatchNorm2d(96, eps=0.001, momentum=0.997, affine=True, track_running_stats=True)\n",
+      "        )\n",
+      "      )\n",
+      "      (10-11): 2 x MobileNetV2InvertedResidual(\n",
+      "        (expand_1x1): MobileNetV2ConvLayer(\n",
+      "          (convolution): Conv2d(96, 576, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+      "          (normalization): BatchNorm2d(576, eps=0.001, momentum=0.997, affine=True, track_running_stats=True)\n",
+      "          (activation): ReLU6()\n",
+      "        )\n",
+      "        (conv_3x3): MobileNetV2ConvLayer(\n",
+      "          (convolution): Conv2d(576, 576, kernel_size=(3, 3), stride=(1, 1), groups=576, bias=False)\n",
+      "          (normalization): BatchNorm2d(576, eps=0.001, momentum=0.997, affine=True, track_running_stats=True)\n",
+      "          (activation): ReLU6()\n",
+      "        )\n",
+      "        (reduce_1x1): MobileNetV2ConvLayer(\n",
+      "          (convolution): Conv2d(576, 96, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+      "          (normalization): BatchNorm2d(96, eps=0.001, momentum=0.997, affine=True, track_running_stats=True)\n",
+      "        )\n",
+      "      )\n",
+      "      (12): MobileNetV2InvertedResidual(\n",
+      "        (expand_1x1): MobileNetV2ConvLayer(\n",
+      "          (convolution): Conv2d(96, 576, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+      "          (normalization): BatchNorm2d(576, eps=0.001, momentum=0.997, affine=True, track_running_stats=True)\n",
+      "          (activation): ReLU6()\n",
+      "        )\n",
+      "        (conv_3x3): MobileNetV2ConvLayer(\n",
+      "          (convolution): Conv2d(576, 576, kernel_size=(3, 3), stride=(2, 2), groups=576, bias=False)\n",
+      "          (normalization): BatchNorm2d(576, eps=0.001, momentum=0.997, affine=True, track_running_stats=True)\n",
+      "          (activation): ReLU6()\n",
+      "        )\n",
+      "        (reduce_1x1): MobileNetV2ConvLayer(\n",
+      "          (convolution): Conv2d(576, 160, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+      "          (normalization): BatchNorm2d(160, eps=0.001, momentum=0.997, affine=True, track_running_stats=True)\n",
+      "        )\n",
+      "      )\n",
+      "      (13-14): 2 x MobileNetV2InvertedResidual(\n",
+      "        (expand_1x1): MobileNetV2ConvLayer(\n",
+      "          (convolution): Conv2d(160, 960, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+      "          (normalization): BatchNorm2d(960, eps=0.001, momentum=0.997, affine=True, track_running_stats=True)\n",
+      "          (activation): ReLU6()\n",
+      "        )\n",
+      "        (conv_3x3): MobileNetV2ConvLayer(\n",
+      "          (convolution): Conv2d(960, 960, kernel_size=(3, 3), stride=(1, 1), groups=960, bias=False)\n",
+      "          (normalization): BatchNorm2d(960, eps=0.001, momentum=0.997, affine=True, track_running_stats=True)\n",
+      "          (activation): ReLU6()\n",
+      "        )\n",
+      "        (reduce_1x1): MobileNetV2ConvLayer(\n",
+      "          (convolution): Conv2d(960, 160, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+      "          (normalization): BatchNorm2d(160, eps=0.001, momentum=0.997, affine=True, track_running_stats=True)\n",
+      "        )\n",
+      "      )\n",
+      "      (15): MobileNetV2InvertedResidual(\n",
+      "        (expand_1x1): MobileNetV2ConvLayer(\n",
+      "          (convolution): Conv2d(160, 960, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+      "          (normalization): BatchNorm2d(960, eps=0.001, momentum=0.997, affine=True, track_running_stats=True)\n",
+      "          (activation): ReLU6()\n",
+      "        )\n",
+      "        (conv_3x3): MobileNetV2ConvLayer(\n",
+      "          (convolution): Conv2d(960, 960, kernel_size=(3, 3), stride=(1, 1), groups=960, bias=False)\n",
+      "          (normalization): BatchNorm2d(960, eps=0.001, momentum=0.997, affine=True, track_running_stats=True)\n",
+      "          (activation): ReLU6()\n",
+      "        )\n",
+      "        (reduce_1x1): MobileNetV2ConvLayer(\n",
+      "          (convolution): Conv2d(960, 320, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+      "          (normalization): BatchNorm2d(320, eps=0.001, momentum=0.997, affine=True, track_running_stats=True)\n",
+      "        )\n",
+      "      )\n",
+      "    )\n",
+      "    (conv_1x1): MobileNetV2ConvLayer(\n",
+      "      (convolution): Conv2d(320, 1280, kernel_size=(1, 1), stride=(1, 1), bias=False)\n",
+      "      (normalization): BatchNorm2d(1280, eps=0.001, momentum=0.997, affine=True, track_running_stats=True)\n",
+      "      (activation): ReLU6()\n",
+      "    )\n",
+      "    (pooler): AdaptiveAvgPool2d(output_size=(1, 1))\n",
+      "  )\n",
+      "  (dropout): Dropout(p=0.2, inplace=True)\n",
+      "  (classifier): Linear(in_features=1280, out_features=1001, bias=True)\n",
+      ")\n"
      ]
     }
    ],
+   "source": [
+    "print(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Define the transform function\n",
     "def transform(example_batch):\n",
@@ -155,10 +367,12 @@
     "    return inputs\n",
     "\n",
     "# Apply the transform to the datasets\n",
-    "dataset = dataset.map(transform, batched=True)\n",
+    "dataset['train'] = dataset['train'].map(transform, batched=True)\n",
+    "dataset['validation'] = dataset['validation'].map(transform, batched=True)\n",
     "\n",
     "# Remove the 'image' column as it's now transformed\n",
-    "dataset = dataset.remove_columns(['image'])\n",
+    "dataset['train'] = dataset['train'].remove_columns(['image'])\n",
+    "dataset['validation'] = dataset['validation'].remove_columns(['image'])\n",
     "\n",
     "# Set the format for PyTorch\n",
     "dataset.set_format(type='torch')"
@@ -440,27 +654,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <div>\n",
-       "      \n",
-       "      <progress value='82' max='82' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [82/82 00:11]\n",
-       "    </div>\n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -490,27 +686,17 @@
     {
      "data": {
       "text/plain": [
-       "['./mobilenet_v2_affectnet_model/preprocessor_config.json']"
+       "['./mobilenet_v2_affectnethq-fer2013_model/preprocessor_config.json']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.save_pretrained('./resnet26_affectnethq-fer2013_model')\n",
-    "feature_extractor.save_pretrained('./resnet26_affectnethq-fer2013_model')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.save_pretrained('./resnet26_fer2013_model')\n",
-    "feature_extractor.save_pretrained('./resnet26_fer2013_model')\n"
+    "model.save_pretrained('./resnet_26_affectnethq-fer2013_model')\n",
+    "feature_extractor.save_pretrained('./resnet_26_affectnethq-fer2013_model')"
    ]
   }
  ],
