More models tested as sanity check

--- a/model_train_huggingface.ipynb
+++ b/model_train_huggingface.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -43,16 +43,8 @@
      "text": [
       "DatasetDict({\n",
       "    train: Dataset({\n",
-      "        features: ['label', 'image'],\n",
-      "        num_rows: 28709\n",
-      "    })\n",
-      "    valid: Dataset({\n",
-      "        features: ['label', 'image'],\n",
-      "        num_rows: 3589\n",
-      "    })\n",
-      "    test: Dataset({\n",
-      "        features: ['label', 'image'],\n",
-      "        num_rows: 3589\n",
+      "        features: ['image', 'label'],\n",
+      "        num_rows: 56532\n",
       "    })\n",
       "})\n",
       "cuda\n"
@@ -70,8 +62,8 @@
    "source": [
     "#Load  dataset\n",
     "\n",
-    "#dataset = load_dataset(\"Piro17/dataset-affecthqnet-fer2013\")\n",
-    "dataset = load_dataset(\"AutumnQiu/fer2013\")\n",
+    "dataset = load_dataset(\"Piro17/dataset-affecthqnet-fer2013\")\n",
+    "#dataset = load_dataset(\"AutumnQiu/fer2013\")\n",
     "\n",
     "sample_train = 24000\n",
     "sample_test = 3000\n",
@@ -90,32 +82,15 @@
     "#Import Moel from HuggingFace\n",
     "\n",
     "#model = \"google/mobilenet_v2_1.0_224\"\n",
-    "model = \"microsoft/resnet-26\"\n",
-    "#model = \"microsoft/resnet-50\"\n",
+    "#model = \"microsoft/resnet-26\"\n",
+    "model = \"microsoft/resnet-50\"\n",
     "feature_extractor = AutoFeatureExtractor.from_pretrained(model)\n",
     "model = AutoModelForImageClassification.from_pretrained(model)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'label': 4, 'image': <PIL.PngImagePlugin.PngImageFile image mode=RGB size=48x48 at 0x7F81E535C880>}\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(dataset['train'][0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -348,18 +323,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Map: 100%|██████████| 24000/24000 [01:53<00:00, 210.98 examples/s]\n",
-      "Map: 100%|██████████| 1950/1950 [00:08<00:00, 223.09 examples/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define the transform function\n",
     "def transform(example_batch):\n",
@@ -382,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -475,8 +441,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='14000' max='25000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [14000/25000 43:47 < 34:24, 5.33 it/s, Epoch 14/25]\n",
+       "      <progress value='11000' max='25000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [11000/25000 31:57 < 40:41, 5.74 it/s, Epoch 11/25]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -493,129 +459,102 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>1.350300</td>\n",
-       "      <td>1.384981</td>\n",
-       "      <td>0.492821</td>\n",
-       "      <td>0.472813</td>\n",
-       "      <td>0.492821</td>\n",
-       "      <td>0.476655</td>\n",
+       "      <td>1.409500</td>\n",
+       "      <td>1.321615</td>\n",
+       "      <td>0.506154</td>\n",
+       "      <td>0.502706</td>\n",
+       "      <td>0.506154</td>\n",
+       "      <td>0.498983</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>1.099400</td>\n",
-       "      <td>0.969630</td>\n",
-       "      <td>0.655385</td>\n",
-       "      <td>0.655929</td>\n",
-       "      <td>0.655385</td>\n",
-       "      <td>0.647976</td>\n",
+       "      <td>1.025300</td>\n",
+       "      <td>0.954400</td>\n",
+       "      <td>0.646667</td>\n",
+       "      <td>0.649047</td>\n",
+       "      <td>0.646667</td>\n",
+       "      <td>0.645568</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>0.882600</td>\n",
-       "      <td>0.757458</td>\n",
-       "      <td>0.736923</td>\n",
-       "      <td>0.756275</td>\n",
-       "      <td>0.736923</td>\n",
-       "      <td>0.736555</td>\n",
+       "      <td>0.906600</td>\n",
+       "      <td>0.790831</td>\n",
+       "      <td>0.714359</td>\n",
+       "      <td>0.715954</td>\n",
+       "      <td>0.714359</td>\n",
+       "      <td>0.713265</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>0.673500</td>\n",
-       "      <td>0.594144</td>\n",
-       "      <td>0.802564</td>\n",
-       "      <td>0.808422</td>\n",
-       "      <td>0.802564</td>\n",
-       "      <td>0.801174</td>\n",
+       "      <td>0.624700</td>\n",
+       "      <td>0.764913</td>\n",
+       "      <td>0.734359</td>\n",
+       "      <td>0.734320</td>\n",
+       "      <td>0.734359</td>\n",
+       "      <td>0.731976</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>5</td>\n",
-       "      <td>0.650200</td>\n",
-       "      <td>0.450776</td>\n",
-       "      <td>0.868205</td>\n",
-       "      <td>0.872714</td>\n",
-       "      <td>0.868205</td>\n",
-       "      <td>0.867845</td>\n",
+       "      <td>0.576800</td>\n",
+       "      <td>0.784318</td>\n",
+       "      <td>0.753333</td>\n",
+       "      <td>0.752003</td>\n",
+       "      <td>0.753333</td>\n",
+       "      <td>0.749302</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>6</td>\n",
-       "      <td>0.337200</td>\n",
-       "      <td>0.370327</td>\n",
-       "      <td>0.892308</td>\n",
-       "      <td>0.894021</td>\n",
-       "      <td>0.892308</td>\n",
-       "      <td>0.892354</td>\n",
+       "      <td>0.335100</td>\n",
+       "      <td>0.752838</td>\n",
+       "      <td>0.765128</td>\n",
+       "      <td>0.769112</td>\n",
+       "      <td>0.765128</td>\n",
+       "      <td>0.764795</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>7</td>\n",
-       "      <td>0.200200</td>\n",
-       "      <td>0.423205</td>\n",
-       "      <td>0.889231</td>\n",
-       "      <td>0.893269</td>\n",
-       "      <td>0.889231</td>\n",
-       "      <td>0.889728</td>\n",
+       "      <td>0.217600</td>\n",
+       "      <td>0.905428</td>\n",
+       "      <td>0.772821</td>\n",
+       "      <td>0.781931</td>\n",
+       "      <td>0.772821</td>\n",
+       "      <td>0.775122</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>8</td>\n",
-       "      <td>0.166100</td>\n",
-       "      <td>0.429164</td>\n",
-       "      <td>0.893846</td>\n",
-       "      <td>0.894151</td>\n",
-       "      <td>0.893846</td>\n",
-       "      <td>0.893528</td>\n",
+       "      <td>0.192600</td>\n",
+       "      <td>0.971205</td>\n",
+       "      <td>0.781538</td>\n",
+       "      <td>0.781742</td>\n",
+       "      <td>0.781538</td>\n",
+       "      <td>0.780384</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>9</td>\n",
-       "      <td>0.115300</td>\n",
-       "      <td>0.360012</td>\n",
-       "      <td>0.922564</td>\n",
-       "      <td>0.922862</td>\n",
-       "      <td>0.922564</td>\n",
-       "      <td>0.922188</td>\n",
+       "      <td>0.141400</td>\n",
+       "      <td>1.012662</td>\n",
+       "      <td>0.789744</td>\n",
+       "      <td>0.791476</td>\n",
+       "      <td>0.789744</td>\n",
+       "      <td>0.789716</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>10</td>\n",
-       "      <td>0.114200</td>\n",
-       "      <td>0.362058</td>\n",
-       "      <td>0.927692</td>\n",
-       "      <td>0.929137</td>\n",
-       "      <td>0.927692</td>\n",
-       "      <td>0.927715</td>\n",
+       "      <td>0.093700</td>\n",
+       "      <td>1.137153</td>\n",
+       "      <td>0.783077</td>\n",
+       "      <td>0.782077</td>\n",
+       "      <td>0.783077</td>\n",
+       "      <td>0.781903</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>11</td>\n",
-       "      <td>0.050000</td>\n",
-       "      <td>0.432025</td>\n",
-       "      <td>0.927179</td>\n",
-       "      <td>0.927589</td>\n",
-       "      <td>0.927179</td>\n",
-       "      <td>0.927168</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>12</td>\n",
-       "      <td>0.072100</td>\n",
-       "      <td>0.442202</td>\n",
-       "      <td>0.922051</td>\n",
-       "      <td>0.922617</td>\n",
-       "      <td>0.922051</td>\n",
-       "      <td>0.922002</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>13</td>\n",
-       "      <td>0.028700</td>\n",
-       "      <td>0.411216</td>\n",
-       "      <td>0.927179</td>\n",
-       "      <td>0.927378</td>\n",
-       "      <td>0.927179</td>\n",
-       "      <td>0.927149</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>14</td>\n",
-       "      <td>0.057500</td>\n",
-       "      <td>0.452614</td>\n",
-       "      <td>0.926154</td>\n",
-       "      <td>0.927395</td>\n",
-       "      <td>0.926154</td>\n",
-       "      <td>0.926295</td>\n",
+       "      <td>0.083200</td>\n",
+       "      <td>1.179070</td>\n",
+       "      <td>0.799487</td>\n",
+       "      <td>0.801358</td>\n",
+       "      <td>0.799487</td>\n",
+       "      <td>0.799993</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -631,10 +570,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/lundm/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "/home/lundm/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1531: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
       "/home/lundm/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1531: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
      ]
@@ -642,10 +577,10 @@
     {
      "data": {
       "text/plain": [
-       "TrainOutput(global_step=14000, training_loss=0.5880692007328783, metrics={'train_runtime': 2628.1408, 'train_samples_per_second': 228.298, 'train_steps_per_second': 9.512, 'total_flos': 4.853967255502848e+18, 'train_loss': 0.5880692007328783, 'epoch': 14.0})"
+       "TrainOutput(global_step=11000, training_loss=0.7367339191545139, metrics={'train_runtime': 1918.5659, 'train_samples_per_second': 312.734, 'train_steps_per_second': 13.031, 'total_flos': 3.813831415037952e+18, 'train_loss': 0.7367339191545139, 'epoch': 11.0})"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +601,7 @@
        "    <div>\n",
        "      \n",
        "      <progress value='82' max='82' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [82/82 00:09]\n",
+       "      [82/82 00:08]\n",
        "    </div>\n",
        "    "
       ],
@@ -681,11 +616,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation Loss: 0.3600\n",
-      "Validation Accuracy: 0.9226\n",
-      "Validation Precision: 0.9229\n",
-      "Validation Recall: 0.9226\n",
-      "Validation F1 Score: 0.9222\n"
+      "Validation Loss: 0.7528\n",
+      "Validation Accuracy: 0.7651\n",
+      "Validation Precision: 0.7691\n",
+      "Validation Recall: 0.7651\n",
+      "Validation F1 Score: 0.7648\n"
      ]
     }
    ],
@@ -706,17 +641,17 @@
     {
      "data": {
       "text/plain": [
-       "['./mobilenet_v2_affectnethq-fer2013_model/preprocessor_config.json']"
+       "['./resnet_26_affectnethq-fer2013_model/preprocessor_config.json']"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.save_pretrained('./resnet_26_affectnethq-fer2013_model')\n",
-    "feature_extractor.save_pretrained('./resnet_26_affectnethq-fer2013_model')"
+    "model.save_pretrained('./resnet_50_affectnethq-fer2013_model')\n",
+    "feature_extractor.save_pretrained('./resnet_50 _affectnethq-fer2013_model')"
    ]
   }
  ],
